# jpeg-pyopengl-filter-prototype

./: .gitignore  README.md  pyproject.toml
jpeg_pyopengl_filter_prototype/: filter_copy.py  filter_invert.py  hello.py  hello_gles2.py  hello_pygame_pyopengl.py  image_transfer.py  my_timer.py  opengl_utils.py  receiver.py  runner.py  sender.py
